# Workspace root. The pure Markdown renderer lives in `crates/md-render` (no
# web/async/CRDT deps); this `md-preview` package is the binary/daemon crate and
# depends on it via a path dependency. In-repo workspace is the deliberately
# reversible first crate-split step (see audit E-module-boundaries).
[workspace]
members = ["crates/md-render", "crates/doc-core"]

[package]
name = "md-preview"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
# The daemon (warp + tokio live-preview server) is on by default for the `md`
# binary, but the renderer + document core build with ZERO web deps when it is
# disabled (`cargo build --no-default-features`), keeping the lib lean & reusable.
default = ["daemon"]
daemon = [
    "dep:tokio",
    "dep:warp",
    "dep:futures-util",
    "dep:webbrowser",
    "dep:serde",
    "dep:serde_json",
    "dep:getrandom",
    "dep:libc",
    "dep:ureq",
    "dep:sha2",
    "dep:subtle",
    "dep:base64",
    # Keep the validator's base64 entry point (`is_update_b64_safe`) present in
    # daemon builds exactly as before the doc-core split.
    "doc-core/base64",
]

# F3 — assumption-breaking knobs for the `/collab` UB guard (now in
# `doc-core`'s `validate.rs`). These exist ONLY to make a silent bypass
# impossible: the validator's grammar is pinned to default `yrs` features on the
# v1 wire format, so enabling any of these is a `compile_error!` until that
# grammar is revisited. They forward into doc-core's same-named features (which
# forward the `yrs` flags), so the interlock fires from either crate; do NOT
# enable one without updating `validate.rs`. Off by default (declared, unused).
yrs-small-client = ["doc-core/yrs-small-client"]
yrs-weak = ["doc-core/yrs-weak"]
yrs-v2-collab = ["doc-core/yrs-v2-collab"]

[dependencies]
# Pure Markdown renderer, split out into its own workspace crate. Re-exported
# from `lib.rs`; carries no web/async/CRDT deps (pulldown-cmark + syntect live
# there now), so `--no-default-features` still drops the whole daemon stack.
md-render = { path = "crates/md-render" }
# Web-free document/CRDT kernel (ADR-0008 Phase 1): the CRDT doc model, diff,
# session + UB validator, the pure collab wire codec, and the `FilePeer` bridge.
# Carries yrs/similar/notify but ZERO web/async deps, so `--no-default-features`
# still drops the whole daemon stack. The `watch` feature (notify filewatcher) is
# on by default — md-preview's watch thread uses `FilePeer::watch`.
doc-core = { path = "crates/doc-core" }

# Daemon-only (optional): the async server stack. Picked per ADR-0003 so
# `yrs-warp` (y-sync + awareness) drops in for Phase 3.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"], optional = true }
warp = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }  # query deserialization for warp
serde_json = { version = "1", optional = true }  # control-plane protocol + JSON frames
webbrowser = { version = "1.2.1", optional = true }  # Opens the default browser cross-platform
getrandom = { version = "0.2", optional = true }  # nonce/session/cap token entropy (pin 0.2; see 03-dependencies.md tail-risk)
libc = { version = "0.2", optional = true }  # SO_PEERCRED, O_NOFOLLOW, fstat for the confinement funnel
ureq = { version = "2", optional = true }  # bundle fetch (pin 2.x; 3.x major is tracked tail-risk)
sha2 = { version = "0.10", optional = true }  # sha384 SRI verification for the bundle cache
subtle = { version = "2", optional = true }  # constant-time compares for nonce/session/cap secrets (Track A2)
base64 = { version = "0.22", optional = true }  # URL_SAFE_NO_PAD + STANDARD — replaces hand-rolled b64 copies

[dev-dependencies]
# A minimal WebSocket *client* for the `/collab` integration tests — the daemon
# (warp) is the server. Pinned to the same version warp already pulls in, so it
# resolves from cache with no new transitive deps. Used only by tests/collab.rs.
tokio-tungstenite = "0.21"
# Atomic temp-file write (bundle cache `store_atomic`) + hermetic test fixtures.
tempfile = "3"
