[package]
name = "md-render"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Pure Markdown -> HTML rendering, extracted from md-preview. Deliberately free
# of any web/async/CRDT dependency so it is reusable on its own (other tools,
# tests, a future daemon) and builds with zero of the daemon stack.

[dependencies]
pulldown-cmark = "0.13.3"  # Fast and GFM compatible
syntect = "5.3.0"
